--- a/src/28208 SpringBootSourceCode/SourceCode/ch8_2/pom.xml
+++ b/src/28208 SpringBootSourceCode/SourceCode/ch8_2/pom.xml
@@ -8,6 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+    
 	<name>ch8_2</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -32,9 +33,8 @@
 	
 		
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.2.0</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
 		<dependency>
