--- a/src/28208 SpringBootSourceCode/SourceCode/ch8_2/src/main/resources/application.properties
+++ b/src/28208 SpringBootSourceCode/SourceCode/ch8_2/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-spring.datasource.driverClassName=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc\:oracle\:thin\:@localhost\:1521\:xe
-spring.datasource.username=boot
-spring.datasource.password=boot
+spring.datasource.url = jdbc:mysql://192.168.1.207:3306/test
+spring.datasource.username = root
+spring.datasource.password = tmmysql123
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
-#1
-spring.jpa.hibernate.ddl-auto=update
-#2
-spring.jpa.show-sql=true
-
-
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.indent_output=true
